// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should render checkbox with type 1`] = `
<div
  class="aladdin-checkbox"
  style="background: rgb(83, 82, 237);"
>
  info
</div>
`;

exports[`<CheckBox /> should render checkbox with type 2`] = `
<div
  class="aladdin-checkbox"
  style="background: rgb(255, 165, 2);"
>
  warning
</div>
`;

exports[`<CheckBox /> should render checkbox with type 3`] = `
<div
  class="aladdin-checkbox"
  style="background: rgb(46, 213, 115);"
>
  positive
</div>
`;

exports[`<CheckBox /> should render checkbox with type 4`] = `
<div
  class="aladdin-checkbox"
  style="background: rgb(255, 71, 87);"
>
  negative
</div>
`;

exports[`<CheckBox /> should render default 1`] = `
<div>
  <div
    class="aladdin-checkbox"
    style="background: rgb(83, 82, 237);"
  >
    default
  </div>
</div>
`;
